--- a/CRONICA/data/cronica/loot_table/character/ikaros/unique/wind_knowledge.json
+++ b/CRONICA/data/cronica/loot_table/character/ikaros/unique/wind_knowledge.json
@@ -10,46 +10,41 @@
             {
               "function": "minecraft:set_components",
               "components": {
-                "minecraft:item_model": "cronica:character/ikaros/select/judgment_stone",
+                "minecraft:item_model": "cronica:character/ikaros/unique/wind_knowledge",
                 "minecraft:custom_model_data": {"strings": ["default"]},
-                "minecraft:enchantment_glint_override": true,
                 "minecraft:max_stack_size": 1,
                 "!minecraft:attribute_modifiers": {},
-                "minecraft:consumable": {
-                  "consume_seconds": 2147483647,
-                  "animation": "none"
-                },
                 "minecraft:custom_data": {
                   "MasterID": "ikaros",
-                  "MasterType": "select",
-                  "ItemCategory": "select_skill",
-                  "ItemID": "judgment_stone",
+                  "MasterType": "unique",
+                  "ItemCategory": "passive_skill",
+                  "ItemID": "wind_knowledge",
                   "ItemMode": "none",
                   "ItemStatus": "ready"
                 },
                 "minecraft:custom_name": {
-                  "text": "裁キノ礫",
+                  "text": "風使イノ心得",
                   "color": "#ffa500",
                   "bold": true
                 },
                 "minecraft:lore": [
                   {
-                    "text": "Select Skill",
-                    "color": "#00ff00",
+                    "text": "Passive Skill",
+                    "color": "#00bfff",
                     "underlined": true,
                     "bold": true
                   },
                   {
-                    "text": "星の力を込めた隕石を降らせる",
+                    "text": "風を纏う心得を得る",
                     "color": "#ffffff"
                   },
                   {
-                    "text": "自由を求めるものに断罪を..",
+                    "text": "雲のようにどこまでも",
                     "color": "#ffffff"
                   },
                   "====================",
                   {
-                    "text": "CT : 38s",
+                    "text": "ActivateTime: 3s",
                     "color": "#00ff00",
                     "underlined": true
                   },
@@ -60,24 +55,11 @@
                   },
                   "====================",
                   {
-                    "text": "爆裂しダメージを与える隕石を落とす",
+                    "text": "武器やスキルを使用している間、落下速度が軽減される",
                     "color": "#ffffff"
                   },
                   {
-                    "text": "チャージ時間に応じて弾数が増える",
-                    "color": "#ffffff"
-                  },
-                  {
-                    "text": "CONNECT：イカロス-太陽神ノ弓<黄昏>",
-                    "color": "#ffa500",
-                    "bold": true
-                  },
-                  {
-                    "text": "武器の発射時、スニークをしているなら、このスキルを発動する",
-                    "color": "#ffffff"
-                  },
-                  {
-                    "text": "発動時は、最大チャージとして扱う",
+                    "text": "効果は数秒間しか持続せず、地面に降りることで再使用可能になる",
                     "color": "#ffffff"
                   }
                 ]
